--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,17 @@ authors = ["Ramon Ortiz <ramonofcgta@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-pytest = "^8.3.3"
-factory-boy = "^3.3.1"
-django = "^5.1.3"
-django-rest-framework = "^0.1.0"
+python = "^3.9"
+django = "^5.0.4"
+djangorestframework = "^3.15.1"
 django-extensions = "^3.2.3"
-django-debug-toolbar = "^4.4.6"
+django-debug-toolbar = "^4.3.0"
+psycopg2-binary = "^2.9.2"
+requests = "^2.28.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.1.1"
+factory-boy = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
